--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">RapidWeatherApp</string>
+    <string name="weather_in">Weather in %1$s</string>
+    <string name="temperature_label">Temperature: %1$s°C</string>
+    <string name="condition_label">Condition: %1$s</string>
+    <string name="sunrise_label">Sunrise</string>
+    <string name="sunset_label">Sunset</string>
+    <string name="weather_icon_description">Weather Icon</string>
+    <string name="close_button">Close</string>
+    <string name="weather_button">Weather</string>
+    <string name="location_access_required">Location access is required to show weather data.</string>
+    <string name="device_location_check">Please enable your device location to be able to see weather data</string>
+    <string name="location_permission_message">Please enable location permission in settings then relaunch the app</string>
+    <string name="location_disabled_message">Please check that your device location is enabled</string>
+    <string name="loading_weather_data">Loading weather data…</string>
+    <string name="error_permission_denied">Location permission not granted</string>
+    <string name="error_location_unavailable">Please enable your device location</string>
+    <string name="error_geocoding_failed">Failed to determine city from location</string>
+    <string name="temperature_data_unavailable">Temperature data not available.</string>
+    <string name="no_weather_data">No weather data.</string>
+    <string name="temperature">Temperature</string>
+    <string name="error_message_format">Error: %1$s</string>
+    <string name="try_again">Try Again</string>
+    <string name="past_days_weather">Past Days Weather</string>
+    <string name="no_past_data">No past data available</string>
+    <string name="loading">Loading...</string>
 </resources>
